--- a/udatamodule.lfm
+++ b/udatamodule.lfm
@@ -80,13 +80,13 @@ object dmPgEngine: TdmPgEngine
       'SELECT'
       '  chain_id,'
       '  task_id,'
-      '  CAST(chain_name AS varchar(255)) as chain_name,'
-      '  COALESCE(run_at, ''* * * * *'') as run_at,'
+      '  chain_name :: varchar(255) as chain_name,'
+      '  COALESCE(run_at, ''* * * * *'') :: varchar(100) as run_at,'
       '  max_instances,'
       '  live,'
       '  self_destruct,'
       '  exclusive_execution,'
-      '  client_name'
+      '  client_name :: varchar(100) as client_name'
       'FROM timetable.chain'
       'ORDER BY chain_id'
     )
